--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-third-repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can do push githup in my code</h1>
     <h2>i can do anythiny</h2>
     <p>i enjoy it</p>
+    <p>i want to be a good web developer</p>
+    <p>i am learning codding javascript.i want to be a good web devlopper</p>
 </body>
 </html>
