--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>i enjoy it</p>
     <p>i want to be a good web developer</p>
     <p>i am learning codding javascript.i want to be a good web devlopper</p>
+    <img src="Ashis.png" alt="">
 </body>
 </html>
